--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "start": "^5.1.0",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
   },
