--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "https://kdt-gitlab.elice.io/ai_track/class_04/data_project/team4/200ok.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "crypto-randomuuid": "^1.0.0"
+  }
 }
