--- a/back/package.json
+++ b/back/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.3.0",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
+    "csv-parse": "^5.0.4",
+    "csvtojson": "^2.0.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
