--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.14.0",
     "jsdoc": "^3.6.10",
     "mongoose": "^6.3.0",
+    "underscore": "^1.13.2",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
   },
