--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.3.0",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1"
