--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.0.0",
