--- a/back/package.json
+++ b/back/package.json
@@ -17,13 +17,17 @@
     "express-validator": "^6.14.0",
     "jsdoc": "^3.6.10",
     "mongoose": "^6.3.0",
+    "swagger-autogen": "^2.21.1",
     "winston": "^3.7.2",
-    "winston-daily-rotate-file": "^4.6.1"
+    "winston-daily-rotate-file": "^4.6.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "csv-parse": "^5.0.4",
     "csvtojson": "^2.0.10",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.3.0"
   }
 }
