--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,12 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "prettier": "^2.6.2",
     "moment": "^2.29.3",
+    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.0.0",
+    "react-page-scroller": "^2.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.11.0",
