--- a/back/package.json
+++ b/back/package.json
@@ -5,22 +5,23 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon index.js && redis-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@sindresorhus/is": "^4.6.0",
+    "concurrently": "^7.1.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "express": "^4.18.0",
     "express-validator": "^6.14.0",
     "jsdoc": "^3.6.10",
-    "mongoose": "^6.3.0",
-    "swagger-autogen": "^2.21.1",
-    "underscore": "^1.13.2",
-    "crypto-js": "^4.1.1",
+    "mongoose": "^6.3.1",
+    "redis": "^4.0.6",
+    "underscore": "^1.13.3",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1",
     "yamljs": "^0.3.0"
