--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@mui/styles": "^5.6.2"
+    "@mui/styles": "^5.6.2",
+    "chart.js": "^3.7.1",
+    "react-chartjs-2": "^4.1.0"
   }
 }
