--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "@mui/styles": "^5.6.2",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
     "chart.js": "^3.7.1",
-    "react-chartjs-2": "^4.1.0"
+    "react-chartjs-2": "^4.1.0",
+    "react-minimal-pie-chart": "^8.3.0"
   }
 }
