--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
+    "heap": "^0.2.7",
     "jsdoc": "^3.6.10",
     "mongoose": "^6.3.1",
     "redis": "^4.0.6",
