--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js && redis-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-csmTools": "node ./src/tests/unittest-csmTools.mjs"
   },
   "author": "",
   "license": "ISC",
