--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.11.0",
+    "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
