--- a/back/package.json
+++ b/back/package.json
@@ -20,10 +20,10 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "jsdoc": "^3.6.10",
-
     "mongoose": "^6.3.2",
-    "redis": "^4.1.0",
+    "multer": "^1.4.4",
     "object.pick": "^1.3.0",
+    "redis": "^4.1.0",
     "swagger-autogen": "^2.21.1",
     "underscore": "^1.13.3",
     "winston": "^3.7.2",
