--- a/back/package.json
+++ b/back/package.json
@@ -21,7 +21,9 @@
     "express-validator": "^6.14.0",
     "jsdoc": "^3.6.10",
     "mongoose": "^6.3.2",
+    "multer": "^1.4.4",
     "redis": "^4.1.0",
+    "sriracha": "^1.0.0",
     "underscore": "^1.13.3",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1",
