--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.0.0",
     "react-page-scroller": "^2.2.1",
     "react-router-dom": "^6.3.0",
