--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "jsdoc": "^3.6.10",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.0",
     "object.pick": "^1.3.0",
     "redis": "^4.1.0",
