--- a/front/package.json
+++ b/front/package.json
@@ -8,17 +8,23 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
     "@mui/styles": "^5.6.2",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-charts": "^5.2.0",
+    "@progress/kendo-react-intl": "^5.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "hammerjs": "^2.0.8",
     "moment": "^2.29.3",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.0.0",
+    "react-grid-heatmap": "^1.1.0",
+    "react-heatmap-grid": "^0.9.0",
     "react-page-scroller": "^2.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
