--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,8 @@
     "react-page-scroller": "^2.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slideshow-image": "^3.7.3",
     "react-spinners": "^0.11.0",
     "react-toastify": "^9.0.1",
     "recharts": "^2.1.9",
