--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@draft-js-plugins/editor": "^4.1.3",
+    "@draft-js-plugins/static-toolbar": "^4.1.3",
+    "@draft-js-plugins/text-alignment": "^1.0.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -13,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "draft-js": "^0.11.7",
     "moment": "^2.29.3",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
