--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@sindresorhus/is": "^4.6.0",
+    "base-64": "^1.0.0",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -25,6 +26,7 @@
     "redis": "^4.1.0",
     "sriracha": "^1.0.0",
     "underscore": "^1.13.3",
+    "utf8": "^3.0.0",
     "winston": "^3.7.2",
     "winston-daily-rotate-file": "^4.6.1",
     "xlsx": "^0.18.5",
