--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js && redis-server",
+    "start-node": "node  index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-csmTools": "node ./src/tests/unittest-csmTools.mjs"
   },
