--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "base-64": "^1.0.0",
     "chart.js": "^3.7.1",
     "draft-js": "^0.11.7",
     "hammerjs": "^2.0.8",
@@ -38,6 +39,7 @@
     "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.18.2",
+    "utf8": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
